fix: исправить работу с историей
- Заменить removeFirst() на remove(0) для совместимости с ArrayList
- Убедиться что история ограничена 10 задачами
- Реализовать перемещение дубликатов в конец истории"